--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,5 @@ rayon = "1.5.1"
 regex = "1.5.4"
 serde = { version = "1.0.130", features = ["derive"] }
 clap = "3.0.0-beta.5"
+nalgebra = "0.29.0"
 
